puppet/puppet/modules/iptables/files/iptables
# Managed by class iptables
# Do NOT modify this file directly, THx.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#base
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#telnetd(tcp23), named(53), portmap(111), ntpd(123), xinetd-rsync(tcp873), oracle(tcp1521), puppet-dashboard(tcp3000), mysqld(tcp3306), puppetmaster(tcp8140)
#http(tcp80,443), nfs(2049:2052), tomcat(tcp8080:8089), zabbix(tcp10050:10051), pvcsvr(tcp10080:10081), memcached(11210:11212,22122), passive_ftp(tcp50000:50020)
-A INPUT -p tcp -s 10.101.1.70 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.1.70 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.1.70 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.1.70 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.1.76 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.1.76 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.1.76 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.1.76 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.1.78 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.1.78 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.1.78 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.1.78 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.162 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.162 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.162 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.162 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.163 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.163 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.163 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.163 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.164 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.164 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.164 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.164 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.165 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.165 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.165 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.165 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.166 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.166 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.166 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.166 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.167 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.167 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.167 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.167 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.168 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.168 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.168 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.168 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.169 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.169 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.169 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.169 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.170 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.170 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.170 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.170 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.171 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.171 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.171 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.171 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.172 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.172 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.172 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.172 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.173 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.173 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.173 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.173 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.174 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.174 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.174 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.174 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.175 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.175 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.175 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.175 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.176 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.176 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.176 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.176 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.177 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.177 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.177 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.177 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.178 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.178 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.178 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.178 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.121 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.121 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.121 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.121 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.122 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.122 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.122 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.122 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.123 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.123 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.123 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.123 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.124 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.124 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.124 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.124 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.126 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.126 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.126 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.126 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.127 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.127 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.127 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.127 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.128 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.128 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.128 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.128 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.111 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.111 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.111 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.111 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.140 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.140 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.140 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.140 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.141 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.141 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.141 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.141 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.142 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.142 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.142 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.142 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.143 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.143 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.143 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.143 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.147 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.147 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.147 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.147 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.148 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.148 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.148 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.148 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.150 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.150 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.150 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.150 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.112 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.112 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.112 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.112 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.113 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.113 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.113 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.113 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.144 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.144 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.144 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.144 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.145 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.145 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.145 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.145 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.152 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.152 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.152 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.152 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.153 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.153 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.153 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.153 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.180 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.180 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.180 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.180 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.181 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.181 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.181 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.181 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.183 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.183 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.183 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.183 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.184 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.184 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.184 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.184 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.186 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.186 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.186 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.186 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.187 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.187 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.187 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.187 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.188 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.188 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.188 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.188 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.189 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.189 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.189 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.189 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.10.34 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.10.34 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.10.34 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.10.34 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.204 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.204 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.204 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.204 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.205 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.205 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.205 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.205 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.77 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.77 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.77 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.77 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.190 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.190 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.190 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.190 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.192 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.12.192 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.192 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.12.192 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.10 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.33.10 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.10 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.33.10 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.11 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.33.11 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.11 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.33.11 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.12 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.101.33.12 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.101.33.12 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.101.33.12 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
-A INPUT -p tcp -s 10.153.70.5 -m multiport --dports 23,53,111,123,873,1521,3000,3306,8140 -j ACCEPT
-A INPUT -p udp -s 10.153.70.5 -m multiport --dports 53,111,123 -j ACCEPT
-A INPUT -p tcp -s 10.153.70.5 -m multiport --dports 80,443,2049:2052,8080:8089,10050:10051,10080:10081,11210:11212,22122,50000:50020 -j ACCEPT
-A INPUT -p udp -s 10.153.70.5 -m multiport --dports 2049:2052,11210:11212 -j ACCEPT
#snmpd(udp161), nrpe(tcp5666)
-A INPUT -p tcp -s 10.101.1.0/24 -m multiport --dports 5666 -j ACCEPT
-A INPUT -p udp -s 10.101.1.0/24 -m multiport --dports 161 -j ACCEPT
-A INPUT -p tcp -s 10.101.12.0/24 -m multiport --dports 5666 -j ACCEPT
-A INPUT -p udp -s 10.101.12.0/24 -m multiport --dports 161 -j ACCEPT
#nginx(tcp8800:8809)
-A INPUT -p tcp -m multiport --dports 8800:8809 -j ACCEPT
#reject all
-A INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
